WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212771
GetMethod isn't performed properly on iterators
https://bugs.webkit.org/show_bug.cgi?id=212771
Summary
GetMethod isn't performed properly on iterators
Alexey Shvayka
Reported
2020-06-04 12:50:46 PDT
GetMethod isn't performed properly on iterators
Attachments
Patch
(17.82 KB, patch)
2020-06-04 12:54 PDT
,
Alexey Shvayka
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Shvayka
Comment 1
2020-06-04 12:54:21 PDT
Created
attachment 401065
[details]
Patch
EWS
Comment 2
2020-06-04 13:49:27 PDT
Committed
r262567
: <
https://trac.webkit.org/changeset/262567
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401065
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-06-04 13:50:17 PDT
<
rdar://problem/63993992
>
Alexey Shvayka
Comment 4
2020-06-07 05:35:16 PDT
***
Bug 185208
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug